--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -631,7 +631,7 @@
 
   </span>
   (2013).
-  <a href="/publication/conference-paper/">An example conference paper</a>.
+  <a href="/publication/conference-paper/">Sumit Paper</a>.
   In <em>STC</em>.
   
   <p>
