hide post section

--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -232,7 +232,7 @@
   
   <meta property="og:site_name" content="Sumit Gupta">
   <meta property="og:url" content="/talk/">
-  <meta property="og:title" content="Recent &amp; Upcoming Talks | Sumit Gupta">
+  <meta property="og:title" content="Talks | Sumit Gupta">
   <meta property="og:description" content="Data Scientist"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
   
@@ -253,7 +253,7 @@
 
 
 
-  <title>Recent &amp; Upcoming Talks | Sumit Gupta</title>
+  <title>Talks | Sumit Gupta</title>
 
 </head>
 
@@ -455,7 +455,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Recent &amp; Upcoming Talks</h1>
+  <h1>Talks</h1>
 
   
 
